@@ -1,3 +1,13 @@
+2007-08-20  Ulrich Drepper  <drepper@redhat.com>
+
+	* csu/libc-start.c: Don't handle VDSO_SETUP here.
+	* sysdeps/unix/sysv/linux/init-first.c: Handle it here instead.
+	* sysdeps/unix/sysv/linux/x86_64/libc-start.c: Renamed to...
+	* sysdeps/unix/sysv/linux/x86_64/init-first.c: ...this.  New file.
+	* sysdeps/unix/sysv/linux/powerpc/libc-start.c: Move VDSO_SETUP code
+	to...
+	* sysdeps/unix/sysv/linux/x86_64/init-first.c: ...here.  New file.
+
 2007-08-18  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/nl.po: Update from translation team.
